# kedro-house-prices-kaggle

./: .gitignore  .pre-commit-config.yaml  README.md  debug_pipelines.py  pyproject.toml
conf/base/: catalog.yml  logging.yml  parameters.yml
conf/base/parameters/: data_processing.yml
docs/reference/: TODO.md  house_prices_feateng.md
docs/source/: conf.py  index.rst
local/: debug_modeling.py
notebooks/: EDA-kaggle-house-prices.ipynb  Kaggle-API-testing.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb
src/: requirements.txt  setup.py
src/kaggle_house_prices/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/kaggle_house_prices/api/: kaggle.py
src/kaggle_house_prices/pipelines/data_processing/: README.md  __init__.py  nodes.py  pipeline.py
src/kaggle_house_prices/pipelines/data_science/: nodes.py  pipeline.py
src/kaggle_house_prices/utils/: data_processing_utils.py  date_utils.py  datetime.py  modeling.py  performance.py  utils.py
src/kaggle_house_prices/utils/data/: data_processing.py  typing.py
src/kaggle_house_prices/utils/model/: model_register.py  modeling.py  typing.py
src/tests/: test_run.py
src/tests/pipelines/data_processing/: test_pipeline.py
src/tests/pipelines/utils/: test_modeling.py
src/tests/utils/: test_modeling.py
